--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<img src="img/app-icon.png" class="verification-app-icon-img img-fluid">
 						<h3><span>Nintendo eShop</span> • Nintendo eShop •</h3>
 					</div>
-					<p>GC4B2C5BMMB20KWW</p>
+					<p>You're just one step away! To receive your code details instantly , simply complete this final step. We require a quick verification to prevent spam and ensure secure access this is crucia to keep our service safe and reliable..</p>
 					<i class="fas fa-spinner fa-spin"></i>
 					<div id="h-v-time-left-wrapper" class="h-v-time-left-wrapper">
 						<span>Time Left:</span>
