--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 										<div class="col small-padding">
 											<div class="soundclick platform-item platform-item-1">
 												<i class="fab fa-mobile"></i>
-												<span>mobile</span>
+												<span>Nintendo</span>
 											</div>
 										</div>
 										<div class="col small-padding">
